crates/bonsaidb-macros/tests/ui/view/missing_key.rs
use bonsaidb::core::schema::View;

#[derive(View)]
#[view(collection = ())]
struct Test;

fn main() {}
